src/main/gen/xpr/RubyCParser.java
// Generated from /Users/mnajafza/Downloads/CISE-master/src/main/java/xpr/RubyC.g4 by ANTLR 4.7
package xpr;
package xpr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RubyCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, LITERAL=3, COMMA=4, SEMICOLON=5, CRLF=6, COLON=7, REQUIRE=8, 
		END=9, DEF=10, RETURN=11, PIR=12, NEW=13, DEL=14, VPRE=15, VNUM=16, VALIDATE=17, 
		BELONG=18, CLAS=19, PARENT=20, PUT=21, SELF=22, SAVE=23, TRANS=24, DO=25, 
		REND=26, WEB=27, VGE=28, VGT=29, VLE=30, VLT=31, FALSE=32, TRUE=33, IF=34, 
		ELSE=35, ELSIF=36, UNLESS=37, WHILE=38, RETRY=39, BREAK=40, FOR=41, PLUS=42, 
		MINUS=43, MUL=44, DIV=45, MOD=46, EXP=47, EQUAL=48, NOT_EQUAL=49, GREATER=50, 
		LESS=51, LESS_EQUAL=52, GREATER_EQUAL=53, ASSIGN=54, PLUS_ASSIGN=55, MINUS_ASSIGN=56, 
		MUL_ASSIGN=57, DIV_ASSIGN=58, MOD_ASSIGN=59, EXP_ASSIGN=60, BIT_AND=61, 
		BIT_OR=62, BIT_XOR=63, BIT_NOT=64, BIT_SHL=65, BIT_SHR=66, AND=67, OR=68, 
		NOT=69, DOT=70, LEFT_RBRACKET=71, RIGHT_RBRACKET=72, LEFT_SBRACKET=73, 
		RIGHT_SBRACKET=74, NIL=75, SL_COMMENT=76, ML_COMMENT=77, WS=78, STRING=79, 
		INT=80, FLOAT=81, ID=82, ID_GLOBAL=83, ID_FUNCTION=84;
	public static final int
		RULE_prog = 0, RULE_class_definition = 1, RULE_class_declaration = 2, 
		RULE_class_name = 3, RULE_class_body = 4, RULE_expression = 5, RULE_render_statement = 6, 
		RULE_put_statement = 7, RULE_global_get = 8, RULE_global_set = 9, RULE_global_result = 10, 
		RULE_function_inline_call = 11, RULE_require_block = 12, RULE_pir_inline = 13, 
		RULE_pir_expression_list = 14, RULE_function_definition = 15, RULE_function_definition_body = 16, 
		RULE_trans_statement = 17, RULE_function_definition_header = 18, RULE_function_name = 19, 
		RULE_function_definition_params = 20, RULE_function_definition_params_list = 21, 
		RULE_function_definition_param_id = 22, RULE_new_statement = 23, RULE_remove_statement = 24, 
		RULE_arguments = 25, RULE_validate_presence = 26, RULE_validate_num = 27, 
		RULE_cond_num = 28, RULE_belong_statement = 29, RULE_return_statement = 30, 
		RULE_save_statement = 31, RULE_function_call = 32, RULE_function_call_param_list = 33, 
		RULE_function_call_params = 34, RULE_function_param = 35, RULE_function_unnamed_param = 36, 
		RULE_function_named_param = 37, RULE_function_call_assignment = 38, RULE_all_result = 39, 
		RULE_elsif_statement = 40, RULE_if_elsif_statement = 41, RULE_if_statement = 42, 
		RULE_unless_statement = 43, RULE_while_statement = 44, RULE_for_statement = 45, 
		RULE_init_expression = 46, RULE_all_assignment = 47, RULE_for_init_list = 48, 
		RULE_cond_expression = 49, RULE_loop_expression = 50, RULE_for_loop_list = 51, 
		RULE_statement_body = 52, RULE_statement_expression_list = 53, RULE_assignment = 54, 
		RULE_primary_expr = 55, RULE_dynamic_assignment = 56, RULE_int_assignment = 57, 
		RULE_int_plus = 58, RULE_int_minus = 59, RULE_float_assignment = 60, RULE_string_assignment = 61, 
		RULE_initial_array_assignment = 62, RULE_array_assignment = 63, RULE_array_definition = 64, 
		RULE_array_definition_elements = 65, RULE_array_selector = 66, RULE_dynamic_result = 67, 
		RULE_dynamic = 68, RULE_int_result = 69, RULE_float_result = 70, RULE_string_result = 71, 
		RULE_comparison_list = 72, RULE_comparison = 73, RULE_comp_var = 74, RULE_lvalue = 75, 
		RULE_rvalue = 76, RULE_break_expression = 77, RULE_literal_t = 78, RULE_float_t = 79, 
		RULE_int_t = 80, RULE_bool_t = 81, RULE_nil_t = 82, RULE_id = 83, RULE_id_global = 84, 
		RULE_id_function = 85, RULE_terminator = 86, RULE_else_token = 87, RULE_crlf = 88;
	public static final String[] ruleNames = {
		"prog", "class_definition", "class_declaration", "class_name", "class_body", 
		"expression", "render_statement", "put_statement", "global_get", "global_set", 
		"global_result", "function_inline_call", "require_block", "pir_inline", 
		"pir_expression_list", "function_definition", "function_definition_body", 
		"trans_statement", "function_definition_header", "function_name", "function_definition_params", 
		"function_definition_params_list", "function_definition_param_id", "new_statement", 
		"remove_statement", "arguments", "validate_presence", "validate_num", 
		"cond_num", "belong_statement", "return_statement", "save_statement", 
		"function_call", "function_call_param_list", "function_call_params", "function_param", 
		"function_unnamed_param", "function_named_param", "function_call_assignment", 
		"all_result", "elsif_statement", "if_elsif_statement", "if_statement", 
		"unless_statement", "while_statement", "for_statement", "init_expression", 
		"all_assignment", "for_init_list", "cond_expression", "loop_expression", 
		"for_loop_list", "statement_body", "statement_expression_list", "assignment", 
		"primary_expr", "dynamic_assignment", "int_assignment", "int_plus", "int_minus", 
		"float_assignment", "string_assignment", "initial_array_assignment", "array_assignment", 
		"array_definition", "array_definition_elements", "array_selector", "dynamic_result", 
		"dynamic", "int_result", "float_result", "string_result", "comparison_list", 
		"comparison", "comp_var", "lvalue", "rvalue", "break_expression", "literal_t", 
		"float_t", "int_t", "bool_t", "nil_t", "id", "id_global", "id_function", 
		"terminator", "else_token", "crlf"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'{'", "'}'", null, "','", "';'", null, "':'", "'require'", "'end'", 
		"'def'", "'return'", "'pir'", "'new'", null, "'validates_presence_of'", 
		"'validates_numericality_of'", "'validates'", "'belongs_to'", "'class'", 
		"'ApplicationController'", "'puts'", "'self'", "'save!'", "'transaction'", 
		"'do'", "'render'", "'json:'", "'greater_than_or_equal_to:'", "'greater_than:'", 
		"'less_than_or_equal_to:'", "'less_than:'", "'false'", "'true'", "'if'", 
		"'else'", "'elsif'", "'unless'", "'while'", "'retry'", "'break'", "'for'", 
		"'+'", "'-'", "'*'", "'/'", "'%'", "'**'", "'=='", "'!='", "'>'", "'<'", 
		"'<='", "'>='", "'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'**='", 
		"'&'", "'|'", "'^'", "'~'", "'<<'", "'>>'", null, null, null, "'.'", "'('", 
		"')'", "'['", "']'", "'nil'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, "LITERAL", "COMMA", "SEMICOLON", "CRLF", "COLON", "REQUIRE", 
		"END", "DEF", "RETURN", "PIR", "NEW", "DEL", "VPRE", "VNUM", "VALIDATE", 
		"BELONG", "CLAS", "PARENT", "PUT", "SELF", "SAVE", "TRANS", "DO", "REND", 
		"WEB", "VGE", "VGT", "VLE", "VLT", "FALSE", "TRUE", "IF", "ELSE", "ELSIF", 
		"UNLESS", "WHILE", "RETRY", "BREAK", "FOR", "PLUS", "MINUS", "MUL", "DIV", 
		"MOD", "EXP", "EQUAL", "NOT_EQUAL", "GREATER", "LESS", "LESS_EQUAL", "GREATER_EQUAL", 
		"ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", 
		"EXP_ASSIGN", "BIT_AND", "BIT_OR", "BIT_XOR", "BIT_NOT", "BIT_SHL", "BIT_SHR", 
		"AND", "OR", "NOT", "DOT", "LEFT_RBRACKET", "RIGHT_RBRACKET", "LEFT_SBRACKET", 
		"RIGHT_SBRACKET", "NIL", "SL_COMMENT", "ML_COMMENT", "WS", "STRING", "INT", 
		"FLOAT", "ID", "ID_GLOBAL", "ID_FUNCTION"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RubyC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RubyCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public List<Class_definitionContext> class_definition() {
			return getRuleContexts(Class_definitionContext.class);
		}
		public Class_definitionContext class_definition(int i) {
			return getRuleContext(Class_definitionContext.class,i);
		}
		public List<TerminatorContext> terminator() {
			return getRuleContexts(TerminatorContext.class);
		}
		public TerminatorContext terminator(int i) {
			return getRuleContext(TerminatorContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RubyCListener ) ((RubyCListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RubyCListener ) ((RubyCListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CLAS) {
				{
				{
				setState(178);
				class_definition();
				setState(182);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SEMICOLON || _la==CRLF) {
					{
					{
					setState(179);
					terminator(0);
					}
					}
					setState(184);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(189);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_definitionContext extends ParserRuleContext {
		public Class_declarationContext class_declaration() {
			return getRuleContext(Class_declarationContext.class,0);
		}
		public Class_bodyContext class_body() {
			return getRuleContext(Class_bodyContext.class,0);
		}
		public TerminalNode END() { return getToken(RubyCParser.END, 0); }
		public Class_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RubyCListener ) ((RubyCListener)listener).enterClass_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RubyCListener ) ((RubyCListener)listener).exitClass_definition(this);
		}
	}

	public final Class_definitionContext class_definition() throws RecognitionException {
		Class_definitionContext _localctx = new Class_definitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_class_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(190);
			class_declaration();
			setState(191);
			class_body();
			setState(192);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_declarationContext extends ParserRuleContext {
		public TerminalNode CLAS() { return getToken(RubyCParser.CLAS, 0); }
		public Class_nameContext class_name() {
			return getRuleContext(Class_nameContext.class,0);
		}
		public TerminalNode LESS() { return getToken(RubyCParser.LESS, 0); }
		public TerminalNode PARENT() { return getToken(RubyCParser.PARENT, 0); }
		public List<CrlfContext> crlf() {
			return getRuleContexts(CrlfContext.class);
		}
		public CrlfContext crlf(int i) {
			return getRuleContext(CrlfContext.class,i);
		}
		public Class_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RubyCListener ) ((RubyCListener)listener).enterClass_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RubyCListener ) ((RubyCListener)listener).exitClass_declaration(this);
		}
	}

	public final Class_declarationContext class_declaration() throws RecognitionException {
		Class_declarationContext _localctx = new Class_declarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_class_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(194);
			match(CLAS);
			setState(195);
			class_name();
			setState(196);
			match(LESS);
			setState(197);
			match(PARENT);
			setState(199); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(198);
				crlf();
				}
				}
				setState(201); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CRLF );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_nameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(RubyCParser.ID, 0); }
		public Class_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RubyCListener ) ((RubyCListener)listener).enterClass_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RubyCListener ) ((RubyCListener)listener).exitClass_name(this);
		}
	}

	public final Class_nameContext class_name() throws RecognitionException {
		Class_nameContext _localctx = new Class_nameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_class_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_bodyContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminatorContext> terminator() {
			return getRuleContexts(TerminatorContext.class);
		}
		public TerminatorContext terminator(int i) {
			return getRuleContext(TerminatorContext.class,i);
		}
		public Class_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RubyCListener ) ((RubyCListener)listener).enterClass_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RubyCListener ) ((RubyCListener)listener).exitClass_body(this);
		}
	}

	public final Class_bodyContext class_body() throws RecognitionException {
		Class_bodyContext _localctx = new Class_bodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_class_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(213);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LITERAL) | (1L << REQUIRE) | (1L << DEF) | (1L << RETURN) | (1L << PIR) | (1L << VPRE) | (1L << VNUM) | (1L << BELONG) | (1L << PUT) | (1L << SELF) | (1L << REND) | (1L << FALSE) | (1L << TRUE) | (1L << IF) | (1L << UNLESS) | (1L << WHILE) | (1L << FOR))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (BIT_NOT - 64)) | (1L << (NOT - 64)) | (1L << (LEFT_RBRACKET - 64)) | (1L << (NIL - 64)) | (1L << (INT - 64)) | (1L << (FLOAT - 64)) | (1L << (ID - 64)) | (1L << (ID_GLOBAL - 64)) | (1L << (ID_FUNCTION - 64)))) != 0)) {
				{
				{
				setState(205);
				expression();
				setState(207); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(206);
					terminator(0);
					}
					}
					setState(209); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==SEMICOLON || _la==CRLF );
				}
				}
				setState(215);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
